--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_APP_ID = "17f18ff1f9d26cdb33c8ce8ff207442b"
+# VITE_APP_ID = "17f18ff1f9d26cdb33c8ce8ff207442b"
+VITE_API_KEY = 4709a39eda1140b0b540ef18881354e2
